name:                msgpack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/msgpack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MsgPack
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.8.2
                     , binary == 0.8.6.0
                     , binary-parsers == 0.2.3.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/msgpack
