name:                msgpack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/msgpack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable benchmark
  main-is: Main.hs
  hs-source-dirs: .
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.8.2
                     , msgpack
                     , criterion
  ghc-options:       -O2

library
  hs-source-dirs:      src
  exposed-modules:     MsgPack
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.8.2
                     , binary == 0.8.6.0
  default-language:    Haskell2010
  ghc-options:       -O2

test-suite test-hunit-msgpack
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  build-depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
                  , msgpack
    
source-repository head
  type:     git
  location: https://github.com/githubuser/msgpack

